<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:title="@string/title_decks"
        android:id="@+id/decks"
        android:enabled="true"
        android:visible="true"
        />

    <item
        android:title="@string/title_stats"
        android:id="@+id/stats"
        android:visible="true"
        android:enabled="true"
        />

    <item
        android:title="@string/title_replays"
        android:id="@+id/replays"
        android:visible="true"
        android:enabled="true"
        />

    <item
        android:title="@string/title_settings"
        android:id="@+id/settings"
        android:visible="true"
        android:enabled="true"
        />

    <item
        android:title="@string/title_about"
        android:id="@+id/about"
        android:visible="true"
        android:enabled="true"
        />

</menu>